[package]
name = "serde_cbor"
version = "0.9.0"
authors = [
    "Pyfisch <pyfisch@gmail.com>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
documentation = "https://docs.rs/serde_cbor/"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization"]
categories = ["encoding"]

[dependencies]
byteorder = { version = "1.0.0", default-features = false }
half = "1.2.0"
serde = { version = "1.0.14", default-features = false }

[dev-dependencies]
serde_bytes = "0.10"
serde_derive = "1.0.14"
