[package]
name = "serde_cbor"
version = "0.9.0"
authors = [
    "Pyfisch <pyfisch@gmail.com>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
documentation = "https://docs.rs/serde_cbor/"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization"]
categories = ["encoding"]

[dependencies]
byteorder = { version = "1.0.0", default-features = false }
half = "1.2.0"
serde = { version = "1.0.14", default-features = false }

[dev-dependencies]
serde_bytes = { version = "0.10", default-features = false }
serde_derive = { version = "1.0.14", default-features = false }

# Needed for the decode_no_std example
#libc = "*"

[features]

default = ["std"]
# serde/std is not strictly required by serde_cbor/std, but probably useful.
# The other direction is actually more critical, as serde_cbor w/o std won't
# implement all trait requirements (Error: std::error::Error) for serde/std.
std = [ "serde/std", "serde_bytes/std" ]
